k8s/grafana-config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/server-snippet: |
      location "/metrics" {
          deny all;
          return 403;
        }
    nginx.ingress.kubernetes.io/limit-rps: "50"
    nginx.ingress.kubernetes.io/limit-rpm: "200"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "2"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleRemoveById 911100
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana.bunetz.dev
    secretName: grafana-tls
  rules:
  - host: grafana.bunetz.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
           service:
            name: grafana
            port:
              number: 80
